--- a/content/publications/conference-paper/cite.bib
+++ b/content/publications/conference-paper/cite.bib
@@ -1,8 +1,7 @@
-@inproceedings{example1,
-  title={An example conference paper},
-  author={Bighetti, Nelson and Ford, Robert},
-  booktitle={Source Themes Conference},
-  pages={1--6},
-  year={2013},
-  organization={IEEE}
+@article{example1,
+  title = {Presence and Cybersickness in Virtual Reality Are Negatively Related: A Review},
+  author={Weech, Seamas and Kenny, Sophie and Barnett-Cowan, Michael},
+  journal = {Frontiers in Psychology},
+  year    = 2019,
+  volume  = 10
 }
